laboratorio-6/analizador.output
Gramática

    0 $accept: programa $end

    1 programa: lista_sentencias

    2 lista_sentencias: ε
    3                 | lista_sentencias sentencia

    4 sentencia: declaracion ';'
    5          | asignacion ';'
    6          | lectura ';'
    7          | escritura ';'
    8          | bloque
    9          | seleccion
   10          | iteracion
   11          | error ';'

   12 declaracion: tipo lista_identificadores

   13 tipo: INT
   14     | FLOAT
   15     | BOOL

   16 lista_identificadores: IDENTIFICADOR
   17                      | lista_identificadores ',' IDENTIFICADOR

   18 asignacion: IDENTIFICADOR '=' expresion

   19 lectura: READ '(' IDENTIFICADOR ')'

   20 escritura: PRINT '(' expresion ')'

   21 bloque: '{' lista_sentencias '}'

   22 seleccion: IF '(' condicion ')' sentencia
   23          | IF '(' condicion ')' sentencia ELSE sentencia

   24 iteracion: WHILE '(' condicion ')' sentencia

   25 condicion: expresion operador_relacional expresion
   26          | BOOL_LITERAL
   27          | '(' condicion ')'
   28          | NOT condicion
   29          | condicion AND condicion
   30          | condicion OR condicion

   31 operador_relacional: '>'
   32                    | '<'
   33                    | GE
   34                    | LE
   35                    | EQ
   36                    | NE

   37 expresion: expresion '+' expresion
   38          | expresion '-' expresion
   39          | expresion '*' expresion
   40          | expresion '/' expresion
   41          | '-' expresion
   42          | '(' expresion ')'
   43          | NUMERO
   44          | IDENTIFICADOR


Terminales con las reglas donde aparecen

    $end (0) 0
    '(' (40) 19 20 22 23 24 27 42
    ')' (41) 19 20 22 23 24 27 42
    '*' (42) 39
    '+' (43) 37
    ',' (44) 17
    '-' (45) 38 41
    '/' (47) 40
    ';' (59) 4 5 6 7 11
    '<' (60) 32
    '=' (61) 18
    '>' (62) 31
    '{' (123) 21
    '}' (125) 21
    error (256) 11
    IDENTIFICADOR <sval> (258) 16 17 18 19 44
    NUMERO <ival> (259) 43
    BOOL_LITERAL <ival> (260) 26
    INT (261) 13
    FLOAT (262) 14
    BOOL (263) 15
    IF (264) 22 23
    ELSE (265) 23
    WHILE (266) 24
    READ (267) 19
    PRINT (268) 20
    GE (269) 33
    LE (270) 34
    EQ (271) 35
    NE (272) 36
    AND (273) 29
    OR (274) 30
    NOT (275) 28
    UMINUS (276)
    LOWER_THAN_ELSE (277)


No terminales con las reglas donde aparecen

    $accept (36)
        on left: 0
    programa (37)
        on left: 1
        on right: 0
    lista_sentencias (38)
        on left: 2 3
        on right: 1 3 21
    sentencia (39)
        on left: 4 5 6 7 8 9 10 11
        on right: 3 22 23 24
    declaracion (40)
        on left: 12
        on right: 4
    tipo (41)
        on left: 13 14 15
        on right: 12
    lista_identificadores (42)
        on left: 16 17
        on right: 12 17
    asignacion (43)
        on left: 18
        on right: 5
    lectura (44)
        on left: 19
        on right: 6
    escritura (45)
        on left: 20
        on right: 7
    bloque (46)
        on left: 21
        on right: 8
    seleccion (47)
        on left: 22 23
        on right: 9
    iteracion (48)
        on left: 24
        on right: 10
    condicion (49)
        on left: 25 26 27 28 29 30
        on right: 22 23 24 27 28 29 30
    operador_relacional (50)
        on left: 31 32 33 34 35 36
        on right: 25
    expresion (51)
        on left: 37 38 39 40 41 42 43 44
        on right: 18 20 25 37 38 39 40 41 42


Estado 0

    0 $accept: • programa $end

    $default  reduce usando la regla 2 (lista_sentencias)

    programa          ir al estado 1
    lista_sentencias  ir al estado 2


Estado 1

    0 $accept: programa • $end

    $end  desplazar e ir al estado 3


Estado 2

    1 programa: lista_sentencias •
    3 lista_sentencias: lista_sentencias • sentencia

    error          desplazar e ir al estado 4
    IDENTIFICADOR  desplazar e ir al estado 5
    INT            desplazar e ir al estado 6
    FLOAT          desplazar e ir al estado 7
    BOOL           desplazar e ir al estado 8
    IF             desplazar e ir al estado 9
    WHILE          desplazar e ir al estado 10
    READ           desplazar e ir al estado 11
    PRINT          desplazar e ir al estado 12
    '{'            desplazar e ir al estado 13

    $end  reduce usando la regla 1 (programa)

    sentencia    ir al estado 14
    declaracion  ir al estado 15
    tipo         ir al estado 16
    asignacion   ir al estado 17
    lectura      ir al estado 18
    escritura    ir al estado 19
    bloque       ir al estado 20
    seleccion    ir al estado 21
    iteracion    ir al estado 22


Estado 3

    0 $accept: programa $end •

    $default  aceptar


Estado 4

   11 sentencia: error • ';'

    ';'  desplazar e ir al estado 23


Estado 5

   18 asignacion: IDENTIFICADOR • '=' expresion

    '='  desplazar e ir al estado 24


Estado 6

   13 tipo: INT •

    $default  reduce usando la regla 13 (tipo)


Estado 7

   14 tipo: FLOAT •

    $default  reduce usando la regla 14 (tipo)


Estado 8

   15 tipo: BOOL •

    $default  reduce usando la regla 15 (tipo)


Estado 9

   22 seleccion: IF • '(' condicion ')' sentencia
   23          | IF • '(' condicion ')' sentencia ELSE sentencia

    '('  desplazar e ir al estado 25


Estado 10

   24 iteracion: WHILE • '(' condicion ')' sentencia

    '('  desplazar e ir al estado 26


Estado 11

   19 lectura: READ • '(' IDENTIFICADOR ')'

    '('  desplazar e ir al estado 27


Estado 12

   20 escritura: PRINT • '(' expresion ')'

    '('  desplazar e ir al estado 28


Estado 13

   21 bloque: '{' • lista_sentencias '}'

    $default  reduce usando la regla 2 (lista_sentencias)

    lista_sentencias  ir al estado 29


Estado 14

    3 lista_sentencias: lista_sentencias sentencia •

    $default  reduce usando la regla 3 (lista_sentencias)


Estado 15

    4 sentencia: declaracion • ';'

    ';'  desplazar e ir al estado 30


Estado 16

   12 declaracion: tipo • lista_identificadores

    IDENTIFICADOR  desplazar e ir al estado 31

    lista_identificadores  ir al estado 32


Estado 17

    5 sentencia: asignacion • ';'

    ';'  desplazar e ir al estado 33


Estado 18

    6 sentencia: lectura • ';'

    ';'  desplazar e ir al estado 34


Estado 19

    7 sentencia: escritura • ';'

    ';'  desplazar e ir al estado 35


Estado 20

    8 sentencia: bloque •

    $default  reduce usando la regla 8 (sentencia)


Estado 21

    9 sentencia: seleccion •

    $default  reduce usando la regla 9 (sentencia)


Estado 22

   10 sentencia: iteracion •

    $default  reduce usando la regla 10 (sentencia)


Estado 23

   11 sentencia: error ';' •

    $default  reduce usando la regla 11 (sentencia)


Estado 24

   18 asignacion: IDENTIFICADOR '=' • expresion

    IDENTIFICADOR  desplazar e ir al estado 36
    NUMERO         desplazar e ir al estado 37
    '-'            desplazar e ir al estado 38
    '('            desplazar e ir al estado 39

    expresion  ir al estado 40


Estado 25

   22 seleccion: IF '(' • condicion ')' sentencia
   23          | IF '(' • condicion ')' sentencia ELSE sentencia

    IDENTIFICADOR  desplazar e ir al estado 36
    NUMERO         desplazar e ir al estado 37
    BOOL_LITERAL   desplazar e ir al estado 41
    NOT            desplazar e ir al estado 42
    '-'            desplazar e ir al estado 38
    '('            desplazar e ir al estado 43

    condicion  ir al estado 44
    expresion  ir al estado 45


Estado 26

   24 iteracion: WHILE '(' • condicion ')' sentencia

    IDENTIFICADOR  desplazar e ir al estado 36
    NUMERO         desplazar e ir al estado 37
    BOOL_LITERAL   desplazar e ir al estado 41
    NOT            desplazar e ir al estado 42
    '-'            desplazar e ir al estado 38
    '('            desplazar e ir al estado 43

    condicion  ir al estado 46
    expresion  ir al estado 45


Estado 27

   19 lectura: READ '(' • IDENTIFICADOR ')'

    IDENTIFICADOR  desplazar e ir al estado 47


Estado 28

   20 escritura: PRINT '(' • expresion ')'

    IDENTIFICADOR  desplazar e ir al estado 36
    NUMERO         desplazar e ir al estado 37
    '-'            desplazar e ir al estado 38
    '('            desplazar e ir al estado 39

    expresion  ir al estado 48


Estado 29

    3 lista_sentencias: lista_sentencias • sentencia
   21 bloque: '{' lista_sentencias • '}'

    error          desplazar e ir al estado 4
    IDENTIFICADOR  desplazar e ir al estado 5
    INT            desplazar e ir al estado 6
    FLOAT          desplazar e ir al estado 7
    BOOL           desplazar e ir al estado 8
    IF             desplazar e ir al estado 9
    WHILE          desplazar e ir al estado 10
    READ           desplazar e ir al estado 11
    PRINT          desplazar e ir al estado 12
    '{'            desplazar e ir al estado 13
    '}'            desplazar e ir al estado 49

    sentencia    ir al estado 14
    declaracion  ir al estado 15
    tipo         ir al estado 16
    asignacion   ir al estado 17
    lectura      ir al estado 18
    escritura    ir al estado 19
    bloque       ir al estado 20
    seleccion    ir al estado 21
    iteracion    ir al estado 22


Estado 30

    4 sentencia: declaracion ';' •

    $default  reduce usando la regla 4 (sentencia)


Estado 31

   16 lista_identificadores: IDENTIFICADOR •

    $default  reduce usando la regla 16 (lista_identificadores)


Estado 32

   12 declaracion: tipo lista_identificadores •
   17 lista_identificadores: lista_identificadores • ',' IDENTIFICADOR

    ','  desplazar e ir al estado 50

    $default  reduce usando la regla 12 (declaracion)


Estado 33

    5 sentencia: asignacion ';' •

    $default  reduce usando la regla 5 (sentencia)


Estado 34

    6 sentencia: lectura ';' •

    $default  reduce usando la regla 6 (sentencia)


Estado 35

    7 sentencia: escritura ';' •

    $default  reduce usando la regla 7 (sentencia)


Estado 36

   44 expresion: IDENTIFICADOR •

    $default  reduce usando la regla 44 (expresion)


Estado 37

   43 expresion: NUMERO •

    $default  reduce usando la regla 43 (expresion)


Estado 38

   41 expresion: '-' • expresion

    IDENTIFICADOR  desplazar e ir al estado 36
    NUMERO         desplazar e ir al estado 37
    '-'            desplazar e ir al estado 38
    '('            desplazar e ir al estado 39

    expresion  ir al estado 51


Estado 39

   42 expresion: '(' • expresion ')'

    IDENTIFICADOR  desplazar e ir al estado 36
    NUMERO         desplazar e ir al estado 37
    '-'            desplazar e ir al estado 38
    '('            desplazar e ir al estado 39

    expresion  ir al estado 52


Estado 40

   18 asignacion: IDENTIFICADOR '=' expresion •
   37 expresion: expresion • '+' expresion
   38          | expresion • '-' expresion
   39          | expresion • '*' expresion
   40          | expresion • '/' expresion

    '+'  desplazar e ir al estado 53
    '-'  desplazar e ir al estado 54
    '*'  desplazar e ir al estado 55
    '/'  desplazar e ir al estado 56

    $default  reduce usando la regla 18 (asignacion)


Estado 41

   26 condicion: BOOL_LITERAL •

    $default  reduce usando la regla 26 (condicion)


Estado 42

   28 condicion: NOT • condicion

    IDENTIFICADOR  desplazar e ir al estado 36
    NUMERO         desplazar e ir al estado 37
    BOOL_LITERAL   desplazar e ir al estado 41
    NOT            desplazar e ir al estado 42
    '-'            desplazar e ir al estado 38
    '('            desplazar e ir al estado 43

    condicion  ir al estado 57
    expresion  ir al estado 45


Estado 43

   27 condicion: '(' • condicion ')'
   42 expresion: '(' • expresion ')'

    IDENTIFICADOR  desplazar e ir al estado 36
    NUMERO         desplazar e ir al estado 37
    BOOL_LITERAL   desplazar e ir al estado 41
    NOT            desplazar e ir al estado 42
    '-'            desplazar e ir al estado 38
    '('            desplazar e ir al estado 43

    condicion  ir al estado 58
    expresion  ir al estado 59


Estado 44

   22 seleccion: IF '(' condicion • ')' sentencia
   23          | IF '(' condicion • ')' sentencia ELSE sentencia
   29 condicion: condicion • AND condicion
   30          | condicion • OR condicion

    AND  desplazar e ir al estado 60
    OR   desplazar e ir al estado 61
    ')'  desplazar e ir al estado 62


Estado 45

   25 condicion: expresion • operador_relacional expresion
   37 expresion: expresion • '+' expresion
   38          | expresion • '-' expresion
   39          | expresion • '*' expresion
   40          | expresion • '/' expresion

    GE   desplazar e ir al estado 63
    LE   desplazar e ir al estado 64
    EQ   desplazar e ir al estado 65
    NE   desplazar e ir al estado 66
    '>'  desplazar e ir al estado 67
    '<'  desplazar e ir al estado 68
    '+'  desplazar e ir al estado 53
    '-'  desplazar e ir al estado 54
    '*'  desplazar e ir al estado 55
    '/'  desplazar e ir al estado 56

    operador_relacional  ir al estado 69


Estado 46

   24 iteracion: WHILE '(' condicion • ')' sentencia
   29 condicion: condicion • AND condicion
   30          | condicion • OR condicion

    AND  desplazar e ir al estado 60
    OR   desplazar e ir al estado 61
    ')'  desplazar e ir al estado 70


Estado 47

   19 lectura: READ '(' IDENTIFICADOR • ')'

    ')'  desplazar e ir al estado 71


Estado 48

   20 escritura: PRINT '(' expresion • ')'
   37 expresion: expresion • '+' expresion
   38          | expresion • '-' expresion
   39          | expresion • '*' expresion
   40          | expresion • '/' expresion

    '+'  desplazar e ir al estado 53
    '-'  desplazar e ir al estado 54
    '*'  desplazar e ir al estado 55
    '/'  desplazar e ir al estado 56
    ')'  desplazar e ir al estado 72


Estado 49

   21 bloque: '{' lista_sentencias '}' •

    $default  reduce usando la regla 21 (bloque)


Estado 50

   17 lista_identificadores: lista_identificadores ',' • IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 73


Estado 51

   37 expresion: expresion • '+' expresion
   38          | expresion • '-' expresion
   39          | expresion • '*' expresion
   40          | expresion • '/' expresion
   41          | '-' expresion •

    $default  reduce usando la regla 41 (expresion)


Estado 52

   37 expresion: expresion • '+' expresion
   38          | expresion • '-' expresion
   39          | expresion • '*' expresion
   40          | expresion • '/' expresion
   42          | '(' expresion • ')'

    '+'  desplazar e ir al estado 53
    '-'  desplazar e ir al estado 54
    '*'  desplazar e ir al estado 55
    '/'  desplazar e ir al estado 56
    ')'  desplazar e ir al estado 74


Estado 53

   37 expresion: expresion '+' • expresion

    IDENTIFICADOR  desplazar e ir al estado 36
    NUMERO         desplazar e ir al estado 37
    '-'            desplazar e ir al estado 38
    '('            desplazar e ir al estado 39

    expresion  ir al estado 75


Estado 54

   38 expresion: expresion '-' • expresion

    IDENTIFICADOR  desplazar e ir al estado 36
    NUMERO         desplazar e ir al estado 37
    '-'            desplazar e ir al estado 38
    '('            desplazar e ir al estado 39

    expresion  ir al estado 76


Estado 55

   39 expresion: expresion '*' • expresion

    IDENTIFICADOR  desplazar e ir al estado 36
    NUMERO         desplazar e ir al estado 37
    '-'            desplazar e ir al estado 38
    '('            desplazar e ir al estado 39

    expresion  ir al estado 77


Estado 56

   40 expresion: expresion '/' • expresion

    IDENTIFICADOR  desplazar e ir al estado 36
    NUMERO         desplazar e ir al estado 37
    '-'            desplazar e ir al estado 38
    '('            desplazar e ir al estado 39

    expresion  ir al estado 78


Estado 57

   28 condicion: NOT condicion •
   29          | condicion • AND condicion
   30          | condicion • OR condicion

    $default  reduce usando la regla 28 (condicion)


Estado 58

   27 condicion: '(' condicion • ')'
   29          | condicion • AND condicion
   30          | condicion • OR condicion

    AND  desplazar e ir al estado 60
    OR   desplazar e ir al estado 61
    ')'  desplazar e ir al estado 79


Estado 59

   25 condicion: expresion • operador_relacional expresion
   37 expresion: expresion • '+' expresion
   38          | expresion • '-' expresion
   39          | expresion • '*' expresion
   40          | expresion • '/' expresion
   42          | '(' expresion • ')'

    GE   desplazar e ir al estado 63
    LE   desplazar e ir al estado 64
    EQ   desplazar e ir al estado 65
    NE   desplazar e ir al estado 66
    '>'  desplazar e ir al estado 67
    '<'  desplazar e ir al estado 68
    '+'  desplazar e ir al estado 53
    '-'  desplazar e ir al estado 54
    '*'  desplazar e ir al estado 55
    '/'  desplazar e ir al estado 56
    ')'  desplazar e ir al estado 74

    operador_relacional  ir al estado 69


Estado 60

   29 condicion: condicion AND • condicion

    IDENTIFICADOR  desplazar e ir al estado 36
    NUMERO         desplazar e ir al estado 37
    BOOL_LITERAL   desplazar e ir al estado 41
    NOT            desplazar e ir al estado 42
    '-'            desplazar e ir al estado 38
    '('            desplazar e ir al estado 43

    condicion  ir al estado 80
    expresion  ir al estado 45


Estado 61

   30 condicion: condicion OR • condicion

    IDENTIFICADOR  desplazar e ir al estado 36
    NUMERO         desplazar e ir al estado 37
    BOOL_LITERAL   desplazar e ir al estado 41
    NOT            desplazar e ir al estado 42
    '-'            desplazar e ir al estado 38
    '('            desplazar e ir al estado 43

    condicion  ir al estado 81
    expresion  ir al estado 45


Estado 62

   22 seleccion: IF '(' condicion ')' • sentencia
   23          | IF '(' condicion ')' • sentencia ELSE sentencia

    error          desplazar e ir al estado 4
    IDENTIFICADOR  desplazar e ir al estado 5
    INT            desplazar e ir al estado 6
    FLOAT          desplazar e ir al estado 7
    BOOL           desplazar e ir al estado 8
    IF             desplazar e ir al estado 9
    WHILE          desplazar e ir al estado 10
    READ           desplazar e ir al estado 11
    PRINT          desplazar e ir al estado 12
    '{'            desplazar e ir al estado 13

    sentencia    ir al estado 82
    declaracion  ir al estado 15
    tipo         ir al estado 16
    asignacion   ir al estado 17
    lectura      ir al estado 18
    escritura    ir al estado 19
    bloque       ir al estado 20
    seleccion    ir al estado 21
    iteracion    ir al estado 22


Estado 63

   33 operador_relacional: GE •

    $default  reduce usando la regla 33 (operador_relacional)


Estado 64

   34 operador_relacional: LE •

    $default  reduce usando la regla 34 (operador_relacional)


Estado 65

   35 operador_relacional: EQ •

    $default  reduce usando la regla 35 (operador_relacional)


Estado 66

   36 operador_relacional: NE •

    $default  reduce usando la regla 36 (operador_relacional)


Estado 67

   31 operador_relacional: '>' •

    $default  reduce usando la regla 31 (operador_relacional)


Estado 68

   32 operador_relacional: '<' •

    $default  reduce usando la regla 32 (operador_relacional)


Estado 69

   25 condicion: expresion operador_relacional • expresion

    IDENTIFICADOR  desplazar e ir al estado 36
    NUMERO         desplazar e ir al estado 37
    '-'            desplazar e ir al estado 38
    '('            desplazar e ir al estado 39

    expresion  ir al estado 83


Estado 70

   24 iteracion: WHILE '(' condicion ')' • sentencia

    error          desplazar e ir al estado 4
    IDENTIFICADOR  desplazar e ir al estado 5
    INT            desplazar e ir al estado 6
    FLOAT          desplazar e ir al estado 7
    BOOL           desplazar e ir al estado 8
    IF             desplazar e ir al estado 9
    WHILE          desplazar e ir al estado 10
    READ           desplazar e ir al estado 11
    PRINT          desplazar e ir al estado 12
    '{'            desplazar e ir al estado 13

    sentencia    ir al estado 84
    declaracion  ir al estado 15
    tipo         ir al estado 16
    asignacion   ir al estado 17
    lectura      ir al estado 18
    escritura    ir al estado 19
    bloque       ir al estado 20
    seleccion    ir al estado 21
    iteracion    ir al estado 22


Estado 71

   19 lectura: READ '(' IDENTIFICADOR ')' •

    $default  reduce usando la regla 19 (lectura)


Estado 72

   20 escritura: PRINT '(' expresion ')' •

    $default  reduce usando la regla 20 (escritura)


Estado 73

   17 lista_identificadores: lista_identificadores ',' IDENTIFICADOR •

    $default  reduce usando la regla 17 (lista_identificadores)


Estado 74

   42 expresion: '(' expresion ')' •

    $default  reduce usando la regla 42 (expresion)


Estado 75

   37 expresion: expresion • '+' expresion
   37          | expresion '+' expresion •
   38          | expresion • '-' expresion
   39          | expresion • '*' expresion
   40          | expresion • '/' expresion

    '*'  desplazar e ir al estado 55
    '/'  desplazar e ir al estado 56

    $default  reduce usando la regla 37 (expresion)


Estado 76

   37 expresion: expresion • '+' expresion
   38          | expresion • '-' expresion
   38          | expresion '-' expresion •
   39          | expresion • '*' expresion
   40          | expresion • '/' expresion

    '*'  desplazar e ir al estado 55
    '/'  desplazar e ir al estado 56

    $default  reduce usando la regla 38 (expresion)


Estado 77

   37 expresion: expresion • '+' expresion
   38          | expresion • '-' expresion
   39          | expresion • '*' expresion
   39          | expresion '*' expresion •
   40          | expresion • '/' expresion

    $default  reduce usando la regla 39 (expresion)


Estado 78

   37 expresion: expresion • '+' expresion
   38          | expresion • '-' expresion
   39          | expresion • '*' expresion
   40          | expresion • '/' expresion
   40          | expresion '/' expresion •

    $default  reduce usando la regla 40 (expresion)


Estado 79

   27 condicion: '(' condicion ')' •

    $default  reduce usando la regla 27 (condicion)


Estado 80

   29 condicion: condicion • AND condicion
   29          | condicion AND condicion •
   30          | condicion • OR condicion

    $default  reduce usando la regla 29 (condicion)


Estado 81

   29 condicion: condicion • AND condicion
   30          | condicion • OR condicion
   30          | condicion OR condicion •

    AND  desplazar e ir al estado 60

    $default  reduce usando la regla 30 (condicion)


Estado 82

   22 seleccion: IF '(' condicion ')' sentencia •
   23          | IF '(' condicion ')' sentencia • ELSE sentencia

    ELSE  desplazar e ir al estado 85

    $default  reduce usando la regla 22 (seleccion)


Estado 83

   25 condicion: expresion operador_relacional expresion •
   37 expresion: expresion • '+' expresion
   38          | expresion • '-' expresion
   39          | expresion • '*' expresion
   40          | expresion • '/' expresion

    '+'  desplazar e ir al estado 53
    '-'  desplazar e ir al estado 54
    '*'  desplazar e ir al estado 55
    '/'  desplazar e ir al estado 56

    $default  reduce usando la regla 25 (condicion)


Estado 84

   24 iteracion: WHILE '(' condicion ')' sentencia •

    $default  reduce usando la regla 24 (iteracion)


Estado 85

   23 seleccion: IF '(' condicion ')' sentencia ELSE • sentencia

    error          desplazar e ir al estado 4
    IDENTIFICADOR  desplazar e ir al estado 5
    INT            desplazar e ir al estado 6
    FLOAT          desplazar e ir al estado 7
    BOOL           desplazar e ir al estado 8
    IF             desplazar e ir al estado 9
    WHILE          desplazar e ir al estado 10
    READ           desplazar e ir al estado 11
    PRINT          desplazar e ir al estado 12
    '{'            desplazar e ir al estado 13

    sentencia    ir al estado 86
    declaracion  ir al estado 15
    tipo         ir al estado 16
    asignacion   ir al estado 17
    lectura      ir al estado 18
    escritura    ir al estado 19
    bloque       ir al estado 20
    seleccion    ir al estado 21
    iteracion    ir al estado 22


Estado 86

   23 seleccion: IF '(' condicion ')' sentencia ELSE sentencia •

    $default  reduce usando la regla 23 (seleccion)
